# calico

./: Cargo.toml  LICENSE  README.md  build.rs  calico.x
crates/calico-cli/: Cargo.toml  README.md
crates/calico-cli/src/: cli.rs  main.rs
crates/calico-cli/src/commands/: run.rs
crates/calico-cli/src/gdb/: mod.rs  rsp.rs
crates/calico-cli/src/gdb/rsp/: query.rs
crates/calico-cli/src/project/: mod.rs
crates/calico-elf/: Cargo.toml  README.md
crates/calico-elf/src/: lib.rs
crates/calico-harness/: Cargo.toml
crates/calico-harness/src/: lib.rs  log.rs  tracing.rs
crates/calico-harness/src/test/: mod.rs
crates/calico-macros/: Cargo.toml  README.md
crates/calico-macros/src/: lib.rs
crates/calico-macros/src/attributes/: mod.rs  setup.rs  test.rs  tests.rs
crates/calico-macros/src/attributes/test/: parse.rs
crates/calico-macros/src/attributes/tests/: codegen.rs  parse.rs  validate.rs
crates/calico-macros/src/attributes/tests/codegen/: call_test_fn.rs  test.rs
crates/calico-macros/src/attributes/tests/validate/: function.rs  function_init.rs  function_other.rs  function_test.rs  module.rs
crates/calico-rpc/: Cargo.toml  README.md
crates/calico-rpc/src/: runner.rs
crates/calico-runner/: Cargo.toml
crates/calico-runner/src/probe/: mod.rs
crates/calico-runner/src/probe/probe_rs/: mod.rs
examples/stm32f401re/: Cargo.toml  README.md  build.rs
examples/stm32f401re/.cargo/: config.toml
examples/stm32f401re/src/: main.rs
examples/stm32f401re/tests/: examples.rs
src/: export.rs  lib.rs
src/harness/: export.rs  mod.rs
