[workspace]
members = ["crates/*"]
exclude = ["examples/stm32f401re"]

[package]
name = "calico"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "calico"
path = "src/bin/calico"

[features]
default = ["harness", "metadata"]

# ====================
# Standard Library supports

std = [
    "elf",

    # Enable std crate usage for postcard is std usage was requested.
    "calico-rpc/std",
    "calico-elf/std",
]

# ====================
# Host tooling

# Enables reading and writing metadata to ELF files related to tests.
#
# Typically only called from std capable environments.
elf = ["dep:calico-elf", "rpc"]

rpc = ["dep:calico-rpc"]

# ====================
# Testing Harness

harness = ["dep:calico-harness", "macros"]

# Enables printing debug/progress logs using one of the
# logging frameworks below running on the target.
defmt = ["calico-harness/defmt"]
log = ["calico-harness/log"]

# Defines a default panic-handler.
#
# This aliviates the "missing DefaultHandler" error
# you'll get with cortex-m-rt and allows Calico to
# perform panic handling.
#
# Disable if using `panic_probe`.
panic-handler = ["calico-harness/panic-handler"]


# ====================
# Macros

macros = ["dep:calico-macros"]

# Enables allowing the build to spit out
# external metadata associated with a
# test, such as a human-friendly label and
# description.
metadata = ["calico-macros/metadata"]
serde = ["dep:serde", "calico-rpc/serde"]

# ====================
# Other framework support

# Enables tests to emit `tracing` spans and events to the runner.
tracing = [
    # Enables tracing calls in the harness.
    "calico-harness/tracing",
    # Tells the macros to inject some tracing code.
    "calico-macros/tracing",
]

[dependencies]
calico-macros = { path = "crates/calico-macros/", optional = true }
calico-rpc = { path = "crates/calico-rpc/", optional = true }
calico-elf = { path = "crates/calico-elf/", optional = true }
calico-harness = { path = "crates/calico-harness/", optional = true }

object = { version = "0.39.1", optional = true }                        # deals with ELF files
serde_json = { version = "1.0.150", optional = true }                   # deals with ELF files
serde = { version = "1.0.228", optional = true, features = ["derive"] }

postcard = { version = "1.1.3", optional = true }
postcard-rpc = { version = "0.12.0", optional = true }
postcard-schema = { version = "0.2.5", optional = true, features = ["derive"] }
