[package]
name = "calico-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
tracing = []
metadata = []

[dependencies]
darling = "0.23.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
calico-elf = { path = "../calico-elf" }
serde_json = "1.0.150"
