[package]
name = "calico-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0.150", optional = true }                   # deals with ELF files
serde = { version = "1.0.228", optional = true, features = ["derive"] }

postcard = { version = "1.1.3" }
postcard-rpc = { version = "0.12.0" }
postcard-schema = { version = "0.2.5", features = ["derive"] }

[features]
default = ["serde", "std"]
serde = ["dep:serde"]

std = [
    # Enable std crate usage for postcard is std usage was requested.
    "postcard/use-std",
    "postcard-schema/use-std",
    "postcard-rpc/use-std",
]
