[package]
name = "stm32f401re"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stm32f401re"
test = false         # We're not using Rust unit testing.
bench = false        # To make `cargo check --all-targets` work.

[[test]]
name = "examples"
harness = false   # Disable the default test harness.

[dependencies]
calico = { path = "../../", features = ["defmt"] }

embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "stm32f401re",
    "unstable-pac",
    "memory-x",
    "time-driver-tim4",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.10.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
